--- a/websitee/templates/base.html
+++ b/websitee/templates/base.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           {% if user.is_authenticated %}
-          <a class="nav-item nav-link" id="note" href="/">Note</a>
+          <a class="nav-item nav-link" id="note" href="/">Notes</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           <a class="nav-item nav-link" id="profile" href="/profile">Profile</a>
           {% else %}
