--- a/websitee/templates/base.html
+++ b/websitee/templates/base.html
@@ -29,11 +29,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
-          {% if user.is_authenticated %}
-          <a class="nav-item nav-link" id="note" href="/">Notes</a>
+          {% if user.is_authenticated %} <!-- если в аккаунте-->
+          <a class="nav-item nav-link" id="note" href="/">Notes</a> <!-- заголовки -->
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           <a class="nav-item nav-link" id="profile" href="/profile">Profile</a>
-          {% else %}
+          {% else %} <!-- если не в аккаунте-->
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           {% endif %}
