--- a/websitee/templates/sign_up.html
+++ b/websitee/templates/sign_up.html
@@ -23,6 +23,16 @@ content %}
     />
   </div>
   <div class="form-group">
+    <label for="newName">New Name (you have to)</label>
+    <input
+      type="text"
+      class="form-control"
+      id="newName"
+      name="newName"
+      placeholder="Enter new name"
+    />
+  </div>
+  <div class="form-group">
     <label for="password1">Password</label>
     <input
       type="password"
