idle best girls yuqi is my gf

--- a/websitee/templates/profile.html
+++ b/websitee/templates/profile.html
@@ -21,7 +21,8 @@ alt="Рыжая кошка валяется в снегу"
   <p><big><b>ранг:</b></big> {{rang}}</p>
 
 </div>
-
-<button type="button">измениться</button>
-
+<form method="POST">
+<button type="submit" class="btn btn-primary">
+  измениться</button>
+</form>
 {% endblock %}
