--- a/websitee/templates/base.html
+++ b/websitee/templates/base.html
@@ -34,6 +34,7 @@
           <a class="nav-item nav-link" id="note" href="/notes">Notes</a> <!-- заголовки -->
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           <a class="nav-item nav-link" id="profile" href="/profile">Profile</a>
+          <a class="nav-item nav-link" id="info" href="/m-i-nfo">Info</a>
           {% else %} <!-- если не в аккаунте-->
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
