--- a/websitee/templates/info.html
+++ b/websitee/templates/info.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %} {% block title %}m-in-fo{% endblock %} {% block content
 %}
 <h2>Ли Ноу (리노)</h2>
-<p><img src="images/htmlbeer0.jpg" width="100" height="180" align="top" />Красивая пчёлка</p>
-<br><br>
-<p><img src="images/htmlbeer1.jpg" width="120" height="180" align="middle" />
-Очень симпатичная пчёлка</p>
-<br><br>
-<p><img src="images/htmlbeer2.jpg" width="160" height="180" align="bottom" /> Тоже ничего.</p>
+<p><img src="https://i.pinimg.com/originals/a3/35/02/a335027650f5aa09f0c7eaaf9f9fb7c1.jpg" width="500" height="375" align="top" /><b>реальное имя: </b>Ли Минхо (이민호, Lee Min-ho)</p>
+<p><b>другие имена:</b> Ли Ноу (리노, Lee Know)</p>
+<p><b>дата рождения:</b> 25 октября 1998</p>
+<br><p></p><br>
+
+<img src="https://i.pinimg.com/originals/a3/35/02/a335027650f5aa09f0c7eaaf9f9fb7c1.jpg" align="right" width="128" height="128" />
+<p>Изображение обтекает текст справа</p>
+<p>Изображение обтекает текст справа Изображение обтекает текст справа. Изображение обтекает текст справа. Изображение обтекает текст справа. Изображение обтекает текст справа. Изображение обтекает текст справа</p>
+
 {% endblock %}
