--- a/websitee/templates/info.html
+++ b/websitee/templates/info.html
@@ -1,13 +1,77 @@
 {% extends "base.html" %} {% block title %}m-in-fo{% endblock %} {% block content
 %}
 <h2>Ли Ноу (리노)</h2>
-<p><img src="https://i.pinimg.com/originals/a3/35/02/a335027650f5aa09f0c7eaaf9f9fb7c1.jpg" width="500" height="375" align="top" /><b>реальное имя: </b>Ли Минхо (이민호, Lee Min-ho)</p>
-<p><b>другие имена:</b> Ли Ноу (리노, Lee Know)</p>
-<p><b>дата рождения:</b> 25 октября 1998</p>
-<br><p></p><br>
 
-<img src="https://i.pinimg.com/originals/a3/35/02/a335027650f5aa09f0c7eaaf9f9fb7c1.jpg" align="right" width="128" height="128" />
-<p>Изображение обтекает текст справа</p>
-<p>Изображение обтекает текст справа Изображение обтекает текст справа. Изображение обтекает текст справа. Изображение обтекает текст справа. Изображение обтекает текст справа. Изображение обтекает текст справа</p>
-
+<img src="https://i.pinimg.com/originals/a3/35/02/a335027650f5aa09f0c7eaaf9f9fb7c1.jpg" align="left" width="500" height="375" />
+<p><b>  реальное имя: </b>Ли Минхо (이민호, Lee Min-ho)  </p>
+<p><b>  дата рождения:</b> 25 октября 1998</p>
+<p><b>  место рождения: </b>Кимпхо, Кёнгидо, Южная Корея</p>
+<p><b>  знак зодиака:</b> Скорпион</p>
+<p><b>  рост:</b> 172 cм</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<img src="https://i.pinimg.com/originals/c3/19/71/c31971786de3f8f5b9859fbf818d0501.jpg" align="right" width="500" height="400" />
+<h4><b>2017-2018: Пре-дебют и Stray Kids</b></h4>
+<p>С октября по декабрь 2017 Ли Ноу участвовал в шоу на выживание Stray Kids, где формировался состав одноимённой группы. Он выбыл в первых эпизодах, но вместе с также выбывшим Феликсом вернулся в финале, когда участники выступали полным составом. Тогда также было решено, что выбывшие участники тоже дебютируют в составе Stray Kids.
+Ли Ноу совершил свой дебют в составе Stray Kids с мини-альбомом I Am Not 25 марта 2018.</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<img src="https://i.pinimg.com/originals/d9/58/6d/d9586d10b9ad2735f888fc6bc1d1158e.jpg" align="left" width="400" height="400"/>
+<h4><b>LIMBO</b></h4>
+<p>나란히 길을 걸어 마지막이 될 줄도 모르고 난</p>
+<p>남겨진 발자국에서 네 향기가 남았는지 돌아봐</p>
+<p></p>
+<p>우리 이야기 아름다웠고</p>
+<p>넌 내게 남겨진 기억</p>
+<p>그 이상의 의미란 걸 잊지 말아 줘</p>
+<p></p>
+<p>긴 하루 속을 헤매이다 다시 시작되는 밤</p>
+<p>아직 못다 한 말이 많은데</p>
+<p></p>
+<p>나 꿈속에서 아프지 않게</p>
+<p>나지막이 너를 부르고 싶어</p>
+<p>다 잊지 못해 바라는 순간 예전처럼 돌아가게 될까</p>
+<p>한마디에 바뀔 걸 알아 전하지 못한 말</p>
+<p>깊은 꿈 속 나를 가둬 보내지 마</p>
+<p></p>
+<p>기억하지 않아 잊은 줄로 알았던</p>
+<p>너의 추억 한 조각</p>
+<p>그리울 때면 한 번씩 꺼내어 볼게</p>
+<p>내게 보여주던 나만 볼 수 있던 너의 모습</p>
+<p>한 번쯤은 너도 나를 떠올려 줄래</p>
+<p></p>
+<p>우리 이야기 아름다웠고</p>
+<p>넌 내게 남겨진 기억</p>
+<p>그 이상의 의미란 걸 잊지 말아 줘</p>
+<p></p>
+<p>긴 하루 속을 헤매이다 다시 시작되는 밤</p>
+<p>아직 못다 한 말이 많은데</p>
+<p></p>
+<p>나 꿈속에서 아프지 않게</p>
+<p>나지막이 너를 부르고 싶어</p>
+<p>다 잊지 못해 바라는 순간 예전처럼 돌아가게 될까</p>
+<p>한마디에 바뀔 걸 알아 전하지 못한 말</p>
+<p>깊은 꿈 속 나를 가둬 보내지 마</p>
+<p></p>
+<p>그 꿈속에서 아프지 않게</p>
+<p>나지막이 불러볼게</p>
+<p>다 잊지 못해 바라는 순간</p>
+<p>우리 다시 돌아가게 될까</p>
+<p></p>
+<p>한마디에 바뀔 걸 알아 전하지 못한 말</p>
+<p>나지막이 혼잣말</p>
 {% endblock %}
