--- a/websitee/templates/base.html
+++ b/websitee/templates/base.html
@@ -85,7 +85,7 @@
     method: "POST",
     body: JSON.stringify({ noteId: noteId }),
   }).then((_res) => {
-    window.location.href = "/";
+    window.location.href = "/notes";
   });
   }
 </script>
