--- a/websitee/templates/info.html
+++ b/websitee/templates/info.html
@@ -45,6 +45,7 @@
 <p>나 꿈속에서 아프지 않게</p>
 <p>나지막이 너를 부르고 싶어</p>
 <p>다 잊지 못해 바라는 순간 예전처럼 돌아가게 될까</p>
+<img src="https://i.pinimg.com/originals/d6/10/fe/d610fea63be5b555096df44c0bb9e87a.png" align="right" width="380" height="500"/>
 <p>한마디에 바뀔 걸 알아 전하지 못한 말</p>
 <p>깊은 꿈 속 나를 가둬 보내지 마</p>
 <p></p>
@@ -62,6 +63,7 @@
 <p>아직 못다 한 말이 많은데</p>
 <p></p>
 <p>나 꿈속에서 아프지 않게</p>
+<img src="https://i.pinimg.com/originals/92/46/c6/9246c686b9ca00b8c92c07bb13f0bc26.jpg" align="left" width="380" height="500"/>
 <p>나지막이 너를 부르고 싶어</p>
 <p>다 잊지 못해 바라는 순간 예전처럼 돌아가게 될까</p>
 <p>한마디에 바뀔 걸 알아 전하지 못한 말</p>
@@ -74,4 +76,19 @@
 <p></p>
 <p>한마디에 바뀔 걸 알아 전하지 못한 말</p>
 <p>나지막이 혼잣말</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<img src="https://i.pinimg.com/originals/78/ec/68/78ec686456f1180cce413c8e51c2ee9b.jpg" align="right" width="450" height="400"/>
+<h4><b>интересные факты о Лино-я</b></h4>
+<p>~ Любимый цвет - мятный</p>
+<p>~ Ли Ноу - амбидекстр</p>
+<p>~ Если бы он не был участником Stray Kids, он был бы либо танцором, либо его работа была бы связана с животными</p>
+<p>~ Вредная привычка - хрустеть пальцами</p>
+<p>~ Любимое мороженое - клубничное и мятный шоколад</p>
+<p>~ Хореография "SKZ-Player : Dawn" была поставлена им, а песня написана Минхо при поддержке Бан Чана. Он писал её, вспоминая времена, когда тренировался до рассвета и думал, что же такое рассвет. В итоге пришел к ответу, что это пересечение дня и ночи, которое показано в видео</p>
+<p>~ Умеет танцевать бровями</p>
+<p>~ У Ли Ноу есть 3 домашних питомца: коты Суни, Дуни и Дори. Суни он взял из приюта, когда занимался волонтёрством. Ему было обидно, что все дети забирают домой собак, поэтому он решил забрать кота. Дуни он получил от друга, а Дори взял под опеку с сайта</p>
 {% endblock %}
