--- a/websitee/templates/profile.html
+++ b/websitee/templates/profile.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %} {% block title %}stan lee know{% endblock %} {% block content
 %}
 <link rel="stylesheet" href="profile.css">
-
+<style type="text/css">
+body {
+background: #d1f0e4 !important;
+}
+</style>
 <form method="POST">
   <h2 align="center">your HO-home</h2>
   </form>
