--- a/websitee/templates/base.html
+++ b/websitee/templates/base.html
@@ -17,7 +17,13 @@
 
     <title>{% block title %}Note{% endblock %}</title>
   </head>
+
   <body>
+  <style type="text/css">
+body {
+background: #e0ffff!important;
+}
+</style>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <button
         class="navbar-toggler"
