--- a/websitee/templates/profile.css
+++ b/websitee/templates/profile.css
@@ -7,3 +7,8 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
     vertical-align: baseline;
     background: transparent;
 }
+<style type="text/css">
+body {
+background: purple !important;
+}
+</style>
