--- a/websitee/templates/profile.html
+++ b/websitee/templates/profile.html
@@ -6,11 +6,11 @@ body {
 background: #d1f0e4 !important;
 }
 </style>
-<form method="POST">
-  <h2 align="center">your HO-home</h2>
-  </form>
 
-<div class="profile-ava"><img src="{(User.user.avatar)}"></div>
+  <h2 align="center">your HO-home</h2>
+
+
+<div class="profile-ava"><img src="https://i.pinimg.com/originals/15/b1/6d/15b16d329c30f217f45c128499837bd6.jpg" width="590" height="380"></div>
 
 <div align="left">
   <p align="justify"><big><b>дней вместе с Минхо:</b></big> {{dat +1}}</p>
@@ -20,11 +20,11 @@ background: #d1f0e4 !important;
   <p><big><b>ранг:</b></big> {{rang}}</p>
 
 </div>
-<form method="post" enctype="multipart/form-data">
+<!-- <form method="POST" enctype="multipart/form-data">
                                <div class="form-group">
                                     <label for="photo">Выберите файл</label>
                                     <input type="file" class="form-control-file" id="photo" name="file">
                                 </div>
                                 <button type="submit" class="btn btn-primary">измениться</button>
-                            </form>
+                            </form> -->
 {% endblock %}
